...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PR1-9f-ARo">
                                <rect key="frame" x="10" y="44" width="394" height="30"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="URL" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="2EI-Pb-NKT">
                                        <rect key="frame" x="0.0" y="0.0" width="331" height="30"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="URL" returnKeyType="go" enablesReturnKeyAutomatically="YES" smartDashesType="no" smartQuotesType="no" textContentType="url"/>
                                        <connections>
                                            <outlet property="delegate" destination="Zln-23-sBF" id="Dil-J8-hEq"/>
                                        </connections>
...
                            <constraint firstItem="nKb-7J-pAZ" firstAttribute="leading" secondItem="DYh-bA-cLz" secondAttribute="leading" constant="10" id="mO5-vf-lI5"/>
                            <constraint firstItem="23L-N3-Xne" firstAttribute="top" secondItem="nKb-7J-pAZ" secondAttribute="bottom" constant="8" symbolic="YES" id="sbh-km-mdV"/>
                            <constraint firstAttribute="trailing" secondItem="23L-N3-Xne" secondAttribute="trailing" constant="20" symbolic="YES" id="vhI-QS-Sl1"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="DYh-bA-cLz"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="JSON" image="doc.text.fill" catalog="system" id="gwl-YI-2EM"/>
                    <connections>
                        <outlet property="searchTextField" destination="wYO-bZ-GLE" id="Mt6-lE-dOB"/>
                        <outlet property="textView" destination="23L-N3-Xne" id="nia-vN-IUC"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="5ZV-Ju-KxQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
